--- a/hpf18-r/package.json
+++ b/hpf18-r/package.json
@@ -4,8 +4,11 @@
   "description": "Hack Princeton Fall '18 Misadventures in React",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Robert Juall",
   "license": "MIT",
