--- a/TypeScriptTut/kanban_app-master/package.json
+++ b/TypeScriptTut/kanban_app-master/package.json
@@ -25,6 +25,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "node-uuid": "^1.4.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7"
   }
